--- a/hadoop-1.0.3/src/docs/cn/uming.conf
+++ b/hadoop-1.0.3/src/docs/cn/uming.conf
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
   <fonts>
-    <font metrics-file="/grid/0/dev/mfoley/hadoop-1.0/src/docs/cn/uming.xml" kerning="yes" embed-file="/grid/0/dev/mfoley/hadoop-1.0/src/docs/cn/uming.ttc">
+    <font metrics-file="/mnt/hgfs/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/docs/cn/uming.xml" kerning="yes" embed-file="/mnt/hgfs/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/docs/cn/uming.ttc">
       <font-triplet name="AR PL UMing" style="normal" weight="normal"/>
       <font-triplet name="AR PL UMing" style="italic" weight="normal"/>
       <font-triplet name="AR PL UMing" style="normal" weight="bold"/>
