Hadoop 1.0.3 GPU built on Linux Ubuntu 12.04.2 LTS 3.5.0-25-generic
git-svn-id: https://svn.illecker.at/hadoop/hadoop-1.0.3-gpu@16 92b7e55e-a0b3-464a-ad49-a79217619cb3

--- a/hadoop-1.0.3/src/c++/pipes/Makefile
+++ b/hadoop-1.0.3/src/c++/pipes/Makefile
@@ -35,8 +35,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = i686-apple-darwin11.4.0
-host_triplet = i686-apple-darwin11.4.0
+build_triplet = x86_64-unknown-linux-gnu
+host_triplet = x86_64-unknown-linux-gnu
 DIST_COMMON = config.guess config.guess config.sub config.sub \
 	$(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(top_srcdir)/configure $(am__configure_deps) \
@@ -85,15 +85,15 @@ apiHEADERS_INSTALL = $(INSTALL_HEADER)
 HEADERS = $(api_HEADERS)
 ETAGS = etags
 CTAGS = ctags
-ACLOCAL = ${SHELL} /Users/bafu/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /mnt/hgfs/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/missing --run aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /Users/bafu/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/missing --run tar
+AMTAR = ${SHELL} /mnt/hgfs/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /Users/bafu/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/missing --run autoconf
-AUTOHEADER = ${SHELL} /Users/bafu/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/missing --run autoheader
-AUTOMAKE = ${SHELL} /Users/bafu/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/missing --run automake-1.9
-AWK = awk
+AUTOCONF = ${SHELL} /mnt/hgfs/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/missing --run autoconf
+AUTOHEADER = ${SHELL} /mnt/hgfs/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/missing --run autoheader
+AUTOMAKE = ${SHELL} /mnt/hgfs/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/missing --run automake-1.9
+AWK = mawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
@@ -106,15 +106,15 @@ CXXFLAGS = -g -O2
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
-ECHO = /bin/echo
-ECHO_C = \c
-ECHO_N = 
+ECHO = echo
+ECHO_C = 
+ECHO_N = -n
 ECHO_T = 
-EGREP = /usr/bin/grep -E
+EGREP = /bin/grep -E
 EXEEXT = 
 F77 = 
 FFLAGS = 
-GREP = /usr/bin/grep
+GREP = /bin/grep
 HADOOP_UTILS_PREFIX = ${prefix}
 INSTALL_DATA = ${INSTALL} -m 644 -C
 INSTALL_PROGRAM = ${INSTALL}
@@ -126,7 +126,7 @@ LIBS = -lpthread
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LN_S = ln -s
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /Users/bafu/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/missing --run makeinfo
+MAKEINFO = ${SHELL} /mnt/hgfs/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/missing --run makeinfo
 OBJEXT = o
 PACKAGE = hadoop-pipes
 PACKAGE_BUGREPORT = omalley@apache.org
@@ -137,9 +137,9 @@ PACKAGE_URL =
 PACKAGE_VERSION = 0.13.0
 PATH_SEPARATOR = :
 RANLIB = ranlib
-SED = /usr/bin/sed
+SED = /bin/sed
 SET_MAKE = 
-SHELL = /bin/sh
+SHELL = /bin/bash
 STRIP = strip
 VERSION = 0.13.0
 ac_ct_CC = gcc
@@ -155,34 +155,34 @@ am__quote =
 am__tar = ${AMTAR} chof - "$$tardir"
 am__untar = ${AMTAR} xf -
 bindir = ${exec_prefix}/bin
-build = i686-apple-darwin11.4.0
+build = x86_64-unknown-linux-gnu
 build_alias = 
-build_cpu = i686
-build_os = darwin11.4.0
-build_vendor = apple
+build_cpu = x86_64
+build_os = linux-gnu
+build_vendor = unknown
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = i686-apple-darwin11.4.0
+host = x86_64-unknown-linux-gnu
 host_alias = 
-host_cpu = i686
-host_os = darwin11.4.0
-host_vendor = apple
+host_cpu = x86_64
+host_os = linux-gnu
+host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = /Users/bafu/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/install-sh
+install_sh = /mnt/hgfs/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
 localstatedir = ${prefix}/var
 mandir = ${datarootdir}/man
-mkdir_p = $(install_sh) -d
+mkdir_p = mkdir -p --
 oldincludedir = /usr/include
 pdfdir = ${docdir}
-prefix = /Users/bafu/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/../install
+prefix = /mnt/hgfs/workspace/hadoop-1.0.3-gpu/hadoop-1.0.3/src/c++/pipes/../install
 program_transform_name = s,x,x,
 psdir = ${docdir}
 sbindir = ${exec_prefix}/sbin
